# insight-dashboard

./: .editorconfig  .gitignore  README.md  developer.code-workspace  pyproject.toml
.env-templates/: nextjs.env  python-api.env
docs/: PHASE-WORKFLOW.md  PLANNING-WORKFLOW.md
docs/deployment/: HOSTINGER-DEPLOYMENT-GUIDE.md
docs/git-templates/: .gitmessage
docs/planning/: mac-cluster-strategy.md  mac-mini-cluster-configurations.md  machine-roles.md  my-ai-setup-decision.md  my-setup-requirements.md  system-requirements.md
docs/project-templates/: platform-comparison-guide.md
docs/research/: ai-server-comparison.md  pc-ai-server-config.md  pc-console-ai-setup.md  steam-console-mode.md
docs/setup/: MAC-SETUP-GUIDE.md  NAS-SETUP-GUIDE.md  nas-troubleshooting.md
docs/system-setup/: NAS-First-Time-Setup.md
docs/templates/: game-project-planning-template.md
docs/workflows/: godot-workflow.md  macos-vscode-strategy.md  vscode-extension-setup-guide.md  workflow-context.md
insight/: .env.example  .gitignore  DEPLOY.md  HOSTINGER_SETUP_STEPS.md  PROGRESS.md  QUICKSTART.md  README.md  SETUP.md  TESTING.md  TESTING_CHECKLIST.md  melos.yaml
insight/.github/: copilot-instructions.md
insight/backend/: .dockerignore  .env.example  .env.production  .gitignore  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  HOSTINGER_DEPLOYMENT.md  HOSTINGER_QUICKSTART.md  README.md  SQLITE_SETUP.md  TEST_STATUS.md  UPDATE_FLUTTER_APPS.md  alembic.ini  deploy-hostinger.sh  deploy.sh  docker-compose-hostinger.yml  docker-compose-nas.yml  docker-compose.yml  init-db.sql  main.py  nginx-hostinger.conf  pytest.ini  requirements.txt  run_tests.sh  setup-nginx.sh  setup.sh  setup_env.sh  start-server.sh  (+1 more)
templates/general-project/: .gitignore  Makefile  README.md  pyproject.toml
templates/general-project/docs/: HABITS_SUMMARY.md  QUICKSTART.md  USAGE.md
templates/general-project/src/notes_manager/: __init__.py  main.py
templates/general-project/src/seven_habits_workshop/: habit.py  main.py  utils.py
templates/general-project/tests/: __init__.py  test_habit.py  test_main.py  test_utils.py
tools/: README.md
(+321 files in other folders)
